kubernetes/authentication/zitadel/zitadel-traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: zitadel-ingress
  namespace: authentication
  annotations:
    kubernetes.io/ingress.class: traefik
    argocd.argoproj.io/sync-wave: "30"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`zitadel.kubernetes.timo.be`)
      kind: Rule
      services:
        - name: zitadel-helm
          namespace: authentication
          port: 8080
          scheme: h2c
          passHostHeader: true
          # serversTransport: crdb-serverstransport
